[project]
name = "rag-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.34.1",
    "langchain-ollama>=0.3.3",
    "langchain-pinecone>=0.2.8",
    "pinecone>=7.2.0",
    "pypdf>=5.6.0",
]
